style:updated look of index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,53 @@
     <title>ASCII Art Generator</title>
 </head>
 <body>
-    <h1>ASCII Art Generator</h1>
-    <form action="/ascii-art" method="post" enctype="multipart/form-data">
-        <label for="text">Text:</label>
-        <!-- <input type="text" id="text" name="text" required><br><br> -->
-        <textarea name="text" id="" cols="30" rows="10"></textarea><br>
-        <label for="artFile">Choose Art File:</label><br>
-        <label for="standard">Shadow</label>
-        <input type="radio" id="shadow" name="artFile" value="shadow"><br>
-        <label for="standard">Standard</label>
-        <input type="radio" id="standard" name="artFile" value="standard"><br>
-        <label for="standard">ThinkerToy</label>
-        <input type="radio" id="thinkertoy" name="artFile" value="thinkertoy"><br>
-        <input type="submit" value="Generate ASCII Art">
-    </form>
+    <div class="body">
+        <h1>ASCII Art Generator</h1>
+        <form  class="ascii_form" action="/ascii-art" method="post" enctype="multipart/form-data">
+            <!-- <label for="text">Text:</label> -->
+            <!-- <input type="text" id="text" name="text" required><br><br> -->
+            <div class="ascii_input">
+                <textarea name="text" id="" cols="50" rows="10" required></textarea><br>
+            </div>
+            <div class="banner">
+                <h4>Choose Art File:</h4>
+                <label for="standard">Standard</label>
+                <input type="radio" id="standard" name="artFile" value="standard"><br>
+                <label for="shadow">Shadow</label>
+                <input type="radio" id="shadow" name="artFile" value="shadow"><br>
+                <label for="thinkertoy">ThinkerToy</label>
+                <input type="radio" id="thinkertoy" name="artFile" value="thinkertoy"><br>
+    
+            </div>
+    
+            <input class="submit" type="submit" value="Generate ASCII Art">
+        </form>
+
+    </div>
 </body>
+<style>
+body{
+        display: flex;
+        justify-content: center;
+    }
+.body{
+    display: flex;
+    width:50%;
+    flex-direction: column;
+    align-items:center;
+    border-radius:20px;
+    background-color:rgb(211, 207, 207);
+}
+textarea{
+    width:100%;
+    border-radius:15px;
+}
+.submit{
+    padding:10px;
+    width:40%;
+    background-color:rgb(72, 181, 224);
+    border-radius:10px;
+    margin:10px;
+}
+</style>
 </html>
