fix:setting up default banner file

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <div class="banner">
                 <h4>Choose Art File:</h4>
                 <label for="standard">Standard</label>
-                <input type="radio" id="standard" name="artFile" value="standard"><br>
+                <input type="radio" id="standard" name="artFile" value="standard" checked><br>
                 <label for="shadow">Shadow</label>
                 <input type="radio" id="shadow" name="artFile" value="shadow"><br>
                 <label for="thinkertoy">ThinkerToy</label>
