style:style up ascii-art page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <!-- <label for="text">Text:</label> -->
             <!-- <input type="text" id="text" name="text" required><br><br> -->
             <div class="ascii_input">
-                <textarea name="text" id="" cols="50" rows="10" ></textarea><br>
+                <textarea name="text" id="" cols="50" rows="10" required></textarea><br>
             </div>
             <div class="banner">
                 <h4>Choose Art File:</h4>
