--- a/templates/ascii-art.html
+++ b/templates/ascii-art.html
@@ -5,8 +5,33 @@
     <title>ASCII Art Result</title>
 </head>
 <body>
-    <h1>Your ASCII Art</h1>
-    <pre>{{.Art}}</pre>
-    <a href="/">Generate another one</a>
+    <div class="div">
+
+        <h2>Your ASCII Art:</h2>
+        <pre>{{.Art}}</pre>
+    
+        <a href="/">Generate another one</a>
+    </div>
 </body>
+<style>
+    a{
+    padding:15px 10px;
+    width:40%;
+    background-color:rgb(72, 181, 224);
+    border-radius:10px;
+    margin:10px;
+    text-decoration: none;
+    color:whitesmoke;
+    margin-top:30px;
+    width:10%;
+}
+.div{
+    display:flex ;
+    flex-direction: column;
+    align-items: center;
+    justify-content:baseline;
+}
+
+    
+</style>
 </html>
